# solar-intelligence

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  app.py  pyproject.toml  requirements.txt  run_tests.sh  solar_intelligence.example.yaml
examples/: quickstart.py
notebooks/: 01_data_exploration.ipynb  02_solar_analysis.ipynb  03_orientation_simulation.ipynb  04_energy_financial.ipynb  05_dashboard_demo.ipynb  validation_pvwatts.ipynb  validation_pvwatts_executed.ipynb
src/solar_intelligence/: __init__.py  ai_engine.py  config.py  data_loader.py  energy_estimator.py  financial.py  orientation_simulator.py  solar_analysis.py  visualization.py
src/solar_intelligence/ui/: __init__.py  components.py  lumen_app.py  panel_dashboard.py
tests/: conftest.py  test_advanced_simulation.py  test_dashboard.py  test_dashboard_enhanced.py  test_data_loader.py  test_dual_source.py  test_energy_estimator.py  test_financial.py  test_integration.py  test_lumen_cache.py  test_new_features.py  test_orientation_simulator.py  test_solar_analysis.py  test_streams_polar.py  test_visualization.py
