[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-intelligence"
version = "0.1.0"
description = "AI-powered solar potential intelligence platform using scientific climate datasets and HoloViz"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aman Kumar", email = "aman@example.com"},
]
keywords = ["solar", "energy", "climate", "holoviz", "xarray", "pvlib", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "xarray>=2024.1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pvlib>=0.10",
    "requests>=2.28",
    "panel>=1.3",
    "holoviews>=1.18",
    "hvplot>=0.9",
    "datashader>=0.16",
    "param>=2.0",
    "lumen>=0.7",
    "netcdf4>=1.6",
    "h5netcdf>=1.2",
    "zarr>=2.16",
    "geopy>=2.4",
    "dask[complete]>=2024.1",
    "bokeh>=3.3",
    "colorcet>=3.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
era5 = ["cdsapi>=0.6"]
geo = ["geoviews>=1.11", "cartopy>=0.22"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "pre-commit>=3.0"]
notebooks = ["jupyter>=1.0", "jupyterlab>=4.0"]
all = ["solar-intelligence[ai,geo,dev,notebooks]"]

[project.scripts]
solar-intelligence = "solar_intelligence.ui.panel_dashboard:main"

[project.urls]
Homepage = "https://github.com/ghostiee-11/solar-intelligence"
Documentation = "https://github.com/ghostiee-11/solar-intelligence#readme"
Repository = "https://github.com/ghostiee-11/solar-intelligence"
Issues = "https://github.com/ghostiee-11/solar-intelligence/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
